--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Editor backup files
+*~
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -13,8 +16,6 @@ develop-eggs/
 dist/
 downloads/
 eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
