Add astunparse to Travis CI install dependencies
Signed-off-by: Esben Haabendal <esben@haabendal.dk>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - "pip install coveralls"
   - "pip install sh"
+  - "pip install astunparse"
   - "git config --global user.email 'travis@xd-embedded.org'"
   - "git config --global user.name 'Travis CI'"
 script: "nosetests"
